version-23.1/reference/rpk/rpk-redpanda/rpk-redpanda-config-bootstrap.mdx
---
title: rpk redpanda config bootstrap
---

<head>
  <meta name="title" content="rpk redpanda config bootstrap | Redpanda Docs" />
  <meta name="description" content="rpk redpanda config bootstrap" />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-redpanda/rpk-redpanda-config-bootstrap/" />
</head>

Initialize the configuration to bootstrap a cluster.

This command generates a `redpanda.yaml` configuration file to bootstrap a
cluster. If you are modifying the configuration file further, it is recommended
to first bootstrap and then modify. If the file already exists, this command
will set fields as requested by flags, and this may undo some of your earlier
edits.

The `--ips` flag specifies seed servers (ips, ip:ports, or hostnames) that this
broker will use to form a cluster.

By default, `redpanda` expects your machine to have one private IP address, and
`redpanda` will listen on it. If your machine has multiple private IP addresses,
you must use the `--self` flag to specify which ip `redpanda` should listen on.

```bash
rpk redpanda config bootstrap [--self <ip>] [--ips <ip1,ip2,...>] [flags]
```

### Flags

<!--
[cols=",,",]
|===
|*Value* |*Type* |*Description*

|--config |string |Redpanda config file, if not set the file will be
searched for in the default location.

|-h, --help |- |Help for bootstrap

|--ips |strings |Comma-separated list of the seed node addresses or
hostnames; at least three are recommended

|--self |string |Optional IP address for redpanda to listen on; if
empty, defaults to a private address

|-v, --verbose |- |Enable verbose logging (default `false`).
|===

-->
