version-23.2/reference/rpk/rpk-redpanda/rpk-redpanda-config-bootstrap.mdx
---
title: rpk redpanda config bootstrap
rpk_version: v23.2.1
---

<head>
  <meta name="title" content="rpk redpanda config bootstrap | Redpanda Docs" />
  <meta name="description" content="rpk redpanda config bootstrap" />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-redpanda/rpk-redpanda-config-bootstrap/" />
</head>

Initialize the configuration to bootstrap a cluster.

This command generates a `redpanda.yaml` configuration file to bootstrap a
cluster. If you are modifying the configuration file further, it is recommended
to first bootstrap and then modify. If the file already exists, this command
will set fields as requested by flags, and this may undo some of your earlier
edits.

The `--ips` flag specifies seed servers (ips, ip:ports, or hostnames) that this
broker will use to form a cluster.

By default, `redpanda` expects your machine to have one private IP address, and
`redpanda` will listen on it. If your machine has multiple private IP addresses,
you must use the `--self` flag to specify which ip `redpanda` should listen on.

## Usage

```bash
rpk redpanda config bootstrap [--self <ip>] [--ips <ip1,ip2,...>] [flags]
```

## Flags

<!--
[cols=",,",]
|===
|*Value* |*Type* |*Description*

|-h, --help |- |Help for bootstrap.

|--ips |strings |Comma-separated list of the seed node addresses or
hostnames; at least three are recommended.

|--self |string |Optional IP address for redpanda to listen on; if
empty, defaults to a private address.

|--config |string |Redpanda or rpk config file; default search paths are
~/.config/rpk/rpk.yaml, $PWD, and /etc/redpanda/`redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X
help' for detail or '-X list' for terser detail.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===

-->
